# rust-anilist

./: Cargo.toml  README.md
queries/: get_anime.graphql
src/models/: anime.rs  character.rs  gender.rs  language.rs  name.rs  person.rs  studio.rs
tests/: integration_test.rs
