[package]
name = "rust-anilist"
version = "0.1.5"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MIT"
description = """
A Rust wrapper for the Anilist API, providing asynchronous methods to interact
with various entities like Anime, Manga, User, Person, and Character.
"""
readme = "README.md"
homepage = "https://github.com/AmanoTeam/rust-anilist"
repository = "https://github.com/AmanoTeam/rust-anilist"
keywords = ["api", "anilist", "anilist-api"]
categories = ["api-bindings"]
edition = "2021"
exclude = [".github/*", ".rusty-hook.toml"]

[dependencies]
tokio = { version = "^1.42", features = ["macros"] }
serde = { version = "^1.0", features = ["derive"] }
chrono = "0.4.39"
reqwest = "^0.12"
thiserror = "2.0.9"
serde_json = "^1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = { version = "^0.10", features = ["vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.39", features = ["wasmbind"] }

[dev-dependencies]
rusty-hook = "^0.11"
